# renovate-bzlmod-git-override

./: .bazelrc  MODULE.bazel  README.md
